Fallback to the running eclipse if annotation not found in target state
If the annotations can't be found in the target platform currently no
automatic annotations are provided as part of the classpath container.

This now adds a fallback to the running eclipse instance to get the
annotations from there, this is similar on how Tycho works that loads
missing annotations from maven if they are not found in the target.