@@ -16,17 +16,26 @@ package org.eclipse.pde.internal.core.annotations;
 import java.util.Collection;
 import java.util.Collections;
 import java.util.List;
-import java.util.Objects;
-import java.util.stream.Collectors;
+import java.util.concurrent.ConcurrentHashMap;
+import java.util.concurrent.ConcurrentMap;
+import java.util.function.Predicate;
 import java.util.stream.Stream;
 
 import org.eclipse.jdt.core.IClasspathEntry;
+import org.eclipse.osgi.service.resolver.BundleDelta;
 import org.eclipse.osgi.service.resolver.BundleDescription;
+import org.eclipse.osgi.service.resolver.State;
+import org.eclipse.osgi.service.resolver.StateDelta;
 import org.eclipse.pde.core.IClasspathContributor;
 import org.eclipse.pde.core.plugin.IPluginModelBase;
 import org.eclipse.pde.core.plugin.PluginRegistry;
 import org.eclipse.pde.internal.core.ClasspathUtilCore;
+import org.eclipse.pde.internal.core.IStateDeltaListener;
+import org.eclipse.pde.internal.core.PDECore;
 import org.osgi.resource.Resource;
+import org.osgi.service.component.annotations.Activate;
+import org.osgi.service.component.annotations.Component;
+import org.osgi.service.component.annotations.Deactivate;
 
 /**
  * This makes the <a href=
@@ -36,35 +45,67 @@ import org.osgi.resource.Resource;
  * Versioning Annotations</a> available to plugin projects if they are part of
  * the target platform.
  */
-public class OSGiAnnotationsClasspathContributor implements IClasspathContributor {
+@Component(service = IClasspathContributor.class)
+public class OSGiAnnotationsClasspathContributor implements IClasspathContributor, IStateDeltaListener {
+
+	private static final int CHANGE_FLAGS = BundleDelta.ADDED | BundleDelta.REMOVED | BundleDelta.UPDATED;
 
 	private static final Collection<String> OSGI_ANNOTATIONS = List.of("org.osgi.annotation.versioning", //$NON-NLS-1$
 			"org.osgi.annotation.bundle", "org.osgi.service.component.annotations", //$NON-NLS-1$ //$NON-NLS-2$
 			"org.osgi.service.metatype.annotations"); //$NON-NLS-1$
 
+	private ConcurrentMap<String, Collection<IClasspathEntry>> entryMap = new ConcurrentHashMap<>();
+
 	@Override
 	public List<IClasspathEntry> getInitialEntries(BundleDescription project) {
 		IPluginModelBase projectModel = PluginRegistry.findModel((Resource) project);
-		if (projectModel != null) {
-			return ClasspathUtilCore
-					.classpathEntries(annotations().filter(model -> !model.equals(projectModel)))
-					.collect(Collectors.toList());
-		}
-		return Collections.emptyList();
+		return annotations()
+				.map(bundleId -> entryMap.computeIfAbsent(bundleId,
+						id -> ClasspathUtilCore.classpathEntriesForBundle(id).toList()))
+				.flatMap(Collection::stream)
+				.filter(Predicate.not(entry -> ClasspathUtilCore.isEntryForModel(entry, projectModel))).toList();
+	}
+
+	@Activate
+	void registerListener() {
+		PDECore.getDefault().getModelManager().addStateDeltaListener(this);
+	}
+
+	@Deactivate
+	void undregisterListener() {
+		PDECore.getDefault().getModelManager().removeStateDeltaListener(this);
 	}
 
 	/**
 	 * @return s stream of all current available annotations in the current
 	 *         plugin registry
 	 */
-	public static Stream<IPluginModelBase> annotations() {
-		return OSGI_ANNOTATIONS.stream().map(PluginRegistry::findModel).filter(Objects::nonNull)
-				.filter(IPluginModelBase::isEnabled);
+	public static Stream<String> annotations() {
+		return OSGI_ANNOTATIONS.stream();
 	}
 
 	@Override
 	public List<IClasspathEntry> getEntriesForDependency(BundleDescription project, BundleDescription addedDependency) {
 		return Collections.emptyList();
+	}
+
+	@Override
+	public void stateResolved(StateDelta delta) {
+		if (delta == null) {
+			stateChanged(null);
+		} else {
+			// just refresh the items in the map if they have any changes...
+			for (BundleDelta bundleDelta : delta.getChanges(CHANGE_FLAGS, false)) {
+				entryMap.remove(bundleDelta.getBundle().getSymbolicName());
+			}
+		}
+
+	}
+
+	@Override
+	public void stateChanged(State newState) {
+		// we need to refresh everything
+		entryMap.clear();
 	}
 
 }
